--- a/src/routes/global.sass
+++ b/src/routes/global.sass
@@ -1,5 +1,16 @@
+@use 'mixins' as *
+
 body
   -moz-osx-font-smoothing: grayscale
   -webkit-font-smoothing: antialiased
   font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
   margin: 0
+
+.container
+  flex-grow: 1
+  margin: 0 auto
+  position: relative
+  width: auto
+
+  +desktop
+    max-width: 960px
