--- a/src/lib/sass/global.sass
+++ b/src/lib/sass/global.sass
@@ -10,8 +10,13 @@ body
 .container
   flex-grow: 1
   margin: 0 auto
+  padding: 0 20px
   position: relative
   width: auto
 
+  +tablet
+    padding: 0 30px
+
   +desktop
     max-width: 960px
+    padding: 0
