--- a/src/lib/sass/global.sass
+++ b/src/lib/sass/global.sass
@@ -5,7 +5,10 @@ body
   -moz-osx-font-smoothing: grayscale
   -webkit-font-smoothing: antialiased
   font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
-  margin: 0
+  margin: 70px 0 0 0
+
+  +tablet
+    margin-top: 0
 
 .container
   flex-grow: 1
