--- a/src/lib/sass/global.sass
+++ b/src/lib/sass/global.sass
@@ -1,28 +1,9 @@
-@use 'fonts'
-@use 'mixins' as *
-@use 'buttons'
-@use 'breadcrumbs'
-@use 'helpers'
+@use 'base/reset'
+@use 'base/fonts'
 
-body
-  -moz-osx-font-smoothing: grayscale
-  -webkit-font-smoothing: antialiased
-  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
-  margin: 70px 0 0 0
+@use 'elements/button'
+@use 'elements/container'
 
-  +tablet
-    margin-top: 0
+@use 'components/breadcrumb'
 
-.container
-  flex-grow: 1
-  margin: 0 auto
-  padding: 0 20px
-  position: relative
-  width: auto
-
-  +tablet
-    padding: 0 30px
-
-  +desktop
-    max-width: 960px
-    padding: 0
+@use 'helpers/alignment'
