--- a/src/lib/sass/helpers/_spacing.sass
+++ b/src/lib/sass/helpers/_spacing.sass
@@ -1,7 +1,5 @@
 $spacing-shortcuts: ("margin": "m", "padding": "p")
 $spacing-directions: ("top": "t", "right": "r", "bottom": "b", "left": "l")
-$spacing-horizontal: "x"
-$spacing-vertical: "y"
 $spacing-values: ("0": 0, "1": 0.25rem, "2": 0.5rem, "3": 0.75rem, "4": 1rem, "5": 1.5rem, "6": 3rem, "auto": auto)
 
 @each $property, $shortcut in $spacing-shortcuts
@@ -14,12 +12,10 @@ $spacing-values: ("0": 0, "1": 0.25rem, "2": 0.5rem, "3": 0.75rem, "4": 1rem, "5
       .#{$shortcut}#{$suffix}-#{$name}
         #{$property}-#{$direction}: $value !important
     // Horizontal axis
-    @if $spacing-horizontal != null
-      .#{$shortcut}#{$spacing-horizontal}-#{$name}
-        #{$property}-left: $value !important
-        #{$property}-right: $value !important
+    .#{$shortcut}x-#{$name}
+      #{$property}-left: $value !important
+      #{$property}-right: $value !important
     // Vertical axis
-    @if $spacing-vertical != null
-      .#{$shortcut}#{$spacing-vertical}-#{$name}
-        #{$property}-top: $value !important
-        #{$property}-bottom: $value !important
+    .#{$shortcut}y-#{$name}
+      #{$property}-top: $value !important
+      #{$property}-bottom: $value !important
