Ajout du composant "columns" et du helper "gap"

--- a/src/lib/sass/global.sass
+++ b/src/lib/sass/global.sass
@@ -5,7 +5,9 @@
 @use 'elements/container'
 
 @use 'components/breadcrumb'
+@use 'components/columns'
 
 @use 'helpers/alignment'
 @use 'helpers/float'
+@use 'helpers/gap'
 @use 'helpers/spacing'
