Importe les variables et mixins globalement
https://stackoverflow.com/questions/75056422/how-to-use-vitepreprocess-with-global-scss-mixins-in-sveltekit/75555487#75555487

--- a/src/lib/sass/global.sass
+++ b/src/lib/sass/global.sass
@@ -1,13 +1,13 @@
-@use 'base/reset'
-@use 'base/fonts'
+@import 'base/reset'
+@import 'base/fonts'
 
-@use 'elements/button'
-@use 'elements/container'
+@import 'elements/button'
+@import 'elements/container'
 
-@use 'components/breadcrumb'
-@use 'components/columns'
+@import 'components/breadcrumb'
+@import 'components/columns'
 
-@use 'helpers/alignment'
-@use 'helpers/float'
-@use 'helpers/gap'
-@use 'helpers/spacing'
+@import 'helpers/alignment'
+@import 'helpers/float'
+@import 'helpers/gap'
+@import 'helpers/spacing'
